--- a/charts/rdns-server/0.1.13/values.yaml
+++ b/charts/rdns-server/0.1.13/values.yaml
@@ -18,44 +18,46 @@ dnsRootDomain: on-rio.io
 #         cluster-wide: true
 
 # coredns:
-#   exposeHostPort: true
-#   isClusterService: false
-#   image:
-#     repository: niusmallnan/coredns
-#     tag: v1.1.1-rancher4
-#     pullPolicy: IfNotPresent
-#   servers:
-#   - zones:
-#     - zone: .
-#     port: 53
-#     plugins:
-#     - name: file
-#       parameters: /etc/coredns/api.on-rio.io.dbfile api.on-rio.io
-#       configBlock: |-
-#         no_reload
-#     - name: etcd
-#       parameters: on-rio.io
-#       configBlock: |-
-#         path /rdns
-#         endpoint http://etcd-cluster:2379
-#         upstream 1.1.1.1:53 1.0.0.1:53
-#         wildcardbound 4
-#     - name: cache
-#       parameters: 60 on-rio.io
-#     - name: loadbalance
-#     - name: log
-#       parameters: stdout
-#     - name: errors
-#     - name: health
-#   zoneFiles:
-#     - filename: api.on-rio.io.dbfile
-#       domain: api.on-rio.io
-#       contents: |
-#         $ORIGIN api.on-rio.io.     ; designates the start of this zone file in the namespace
-#         $TTL 1h                           ; default expiration time of all resource records without their own TTL value
-#         @                                       IN  SOA      ns1.on-rio.io. on-rio.rancher.com. 1 3h 1h 1w 1h
-#         @                                       IN  CNAME    rdns-server-lb-1538981444.us-west-1.elb.amazonaws.com.
-#         _7c8469744cd3bd85244838f4bd46aa97       IN  CNAME    _d89bf48e492e104f7152378a6babe032.acm-validations.aws.
+  # exposeHostPort: true
+  # isClusterService: false
+  # image:
+  #   repository: niusmallnan/coredns
+  #   tag: v1.1.1-rancher4
+  #   pullPolicy: IfNotPresent
+  # servers:
+  # - zones:
+  #   - zone: .
+  #   port: 53
+  #   plugins:
+  #   - name: file
+  #     parameters: /etc/coredns/api.on-rio.io.dbfile api.on-rio.io
+  #     configBlock: |-
+  #       no_reload
+  #   - name: etcd
+  #     parameters: on-rio.io
+  #     configBlock: |-
+  #       path /rdns
+  #       endpoint http://etcd-cluster:2379
+  #       upstream 1.1.1.1:53 1.0.0.1:53
+  #       wildcardbound 4
+  #   - name: cache
+  #     parameters: 60 on-rio.io
+  #   - name: loadbalance
+  #   - name: prometheus
+  #     parameters: 0.0.0.0:9153
+  #   - name: log
+  #     parameters: stdout
+  #   - name: errors
+  #   - name: health
+  # zoneFiles:
+  #   - filename: api.on-rio.io.dbfile
+  #     domain: api.on-rio.io
+  #     contents: |
+  #       $ORIGIN api.on-rio.io.     ; designates the start of this zone file in the namespace
+  #       $TTL 1h                           ; default expiration time of all resource records without their own TTL value
+  #       @                                       IN  SOA      ns1.on-rio.io. on-rio.rancher.com. 1 3h 1h 1w 1h
+  #       @                                       IN  CNAME    rdns-server-lb-1538981444.us-west-1.elb.amazonaws.com.
+  #       _7c8469744cd3bd85244838f4bd46aa97       IN  CNAME    _d89bf48e492e104f7152378a6babe032.acm-validations.aws.
 
 # From catalog:
 # cert-manager:
@@ -94,3 +96,6 @@ dnsRootDomain: on-rio.io
 #   settings:
 #     ### Agent tags
 #     tags: RANCHER:bigmac,ENV:engineering,ROLE:example-onrio-io
+#     prometheus:
+#       enabled: true
+#       histograms: true
