enable usage of prometheus again

--- a/charts/coredns/13.2/templates/service.yaml
+++ b/charts/coredns/13.2/templates/service.yaml
@@ -32,4 +32,7 @@ spec:
   {{- end }}
   ports:
 {{ include "coredns.servicePorts" . | indent 2 -}}
+{{- if .Values.prometheus.enable -}}
+  - {port: {{ .Values.prometheus.port }}, protocol: TCP}
+{{- end }}
   type: {{ default "ClusterIP" .Values.serviceType }}
