--- a/charts/coredns/13.2/templates/deployment.yaml
+++ b/charts/coredns/13.2/templates/deployment.yaml
@@ -35,6 +35,9 @@ spec:
         scheduler.alpha.kubernetes.io/critical-pod: ''
         scheduler.alpha.kubernetes.io/tolerations: '[{"key":"CriticalAddonsOnly", "operator":"Exists"}]'
         {{- end }}
+        {{- if .Values.prometheus.enable }}
+{{ toYaml .Values.service.annotations | indent 8 }}
+        {{- end }}
     spec:
       serviceAccountName: {{ template "coredns.serviceAccountName" . }}
       {{- if .Values.isClusterService }}
