--- a/charts/rdns-server/0.1.14/templates/tcp-ingress.yaml
+++ b/charts/rdns-server/0.1.14/templates/tcp-ingress.yaml
@@ -8,9 +8,9 @@ metadata:
       kubernetes.io/tls-acme: "true"
       certmanager.k8s.io/cluster-issuer: letsencrypt-prod
       nginx.ingress.kubernetes.io/secure-backends: "true"
-      nginx.ingress.kubernetes.io/limit-rps: 5
-      nginx.ingress.kubernetes.io/limit-rpm: 50
-      nginx.ingress.kubernetes.io/limit-connections: 5
+      nginx.ingress.kubernetes.io/limit-rps: "5"
+      nginx.ingress.kubernetes.io/limit-rpm: "50"
+      nginx.ingress.kubernetes.io/limit-connections: "5"
 spec:
   rules:
   - host: {{ .Values.rdnsServerIngressHostname }}
