--- a/charts/rdns-server/0.1.14/templates/etcdBackup-configmap.yaml
+++ b/charts/rdns-server/0.1.14/templates/etcdBackup-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: backup-config
+  namespace: etcd-operator
 data:
   backup_cr.yaml: |
     apiVersion: "etcd.database.coreos.com/v1beta2"
