--- a/charts/rdns-server/0.1.14/templates/etcdBackup-cronjob.yaml
+++ b/charts/rdns-server/0.1.14/templates/etcdBackup-cronjob.yaml
@@ -2,6 +2,7 @@ apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
   name: etcd-backup
+  namespace: etcd-operator
 spec:
   schedule: "*/30 * * * *"
   jobTemplate:
