--- a/charts/rdns-server/0.1.14/templates/etcdBackup.yaml
+++ b/charts/rdns-server/0.1.14/templates/etcdBackup.yaml
@@ -1,8 +1,8 @@
 apiVersion: etcd.database.coreos.com/v1beta2
 kind: EtcdBackup
 metadata:
-  name: example-etcd-cluster-backup
-  namespace: default
+  name: etcd-cluster-backup
+  namespace: etcd-operator
 spec:
   backupPolicy:
     backupIntervalInSecond: 1800
