--- a/charts/etcd-backup-operator/0.0.1/templates/etcd-backup.yaml
+++ b/charts/etcd-backup-operator/0.0.1/templates/etcd-backup.yaml
@@ -1,8 +1,7 @@
-apiVersion: etcd.database.coreos.com/v1beta2
-kind: EtcdBackup
+apiVersion: "etcd.database.coreos.com/v1beta2"
+kind: "EtcdBackup"
 metadata:
-  name: etcd-cluster-backup
-  namespace: etcd-operator
+  name: "etcd-cluster-backup"
 spec:
   backupPolicy:
     backupIntervalInSecond: {{ .Values.backupIntervalInSecond }}
