update version of operators

--- a/charts/rdns-server/0.1.16/values.yaml
+++ b/charts/rdns-server/0.1.16/values.yaml
@@ -18,7 +18,12 @@ dnsRootDomain: on-rio.io
 #     cluster-wide: true
 #   image:
 #     tag: v0.9.4
-
+# backupOperator:
+#   image:
+#     tag: v0.9.4
+# restoreOperator:
+#   image:
+#     tag: v0.9.4
 
 # coredns:
   # exposeHostPort: true
