--- a/charts/rdns-server/0.2.0/values.yaml
+++ b/charts/rdns-server/0.2.0/values.yaml
@@ -25,12 +25,15 @@ dnsRootDomain: on-rio.io
 #   image:
 #     tag: v0.9.4
 
-# coredns:
+# coredns---
+# replicaCount: 4
 # exposeHostPort: true
 # isClusterService: false
+# exposeHealthCheck: true
+# HealthCheckDomain: api.on-rio.io
 # image:
 #   repository: rancher/coredns
-#   tag: v1.5.0-1-rancher-amd64
+#   tag: v1.5.0-rancher1-2-amd64
 #   pullPolicy: Always
 # affinity:
 #   podAntiAffinity:
@@ -71,7 +74,7 @@ dnsRootDomain: on-rio.io
 #       path /rdns
 #       endpoint http://etcd-cluster:2379
 #       upstream 1.1.1.1:53 1.0.0.1:53
-#       wildcardbound 4
+#       wildcardbound 3
 #   - name: cache
 #     parameters: 60 on-rio.io
 #   - name: loadbalance
@@ -132,7 +135,3 @@ dnsRootDomain: on-rio.io
 #     prometheus:
 #       enabled: true
 #       histograms: true
-
-# etcd-operator-backup:
-# s3:
-#   path: rancher-ext-onrio-io-etcd-backup/onrio-etcd.backup
