--- a/charts/etcd-cluster-backup/0.0.1/Chart.yaml
+++ b/charts/etcd-cluster-backup/0.0.1/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 appVersion: 1.0.0
-description: Deploys backup process for etcd-operator
+description: Runs etcd backup on cron
 icon: https://github.com/rancher/ui/blob/master/public/assets/images/logos/welcome-cow.svg
-name: etcd-backup-operator
-version: 0.0.2
+name: etcd-cluster-backup
+version: 0.0.1
