--- a/charts/etcd-operator-cluster/0.0.1/templates/etcd-cluster.yaml
+++ b/charts/etcd-operator-cluster/0.0.1/templates/etcd-cluster.yaml
@@ -1,11 +1,22 @@
 apiVersion: "etcd.database.coreos.com/v1beta2"
 kind: "EtcdCluster"
 metadata:
-  name: "etcd-cluster"
+  name: {{ .Values.name }}
   annotations:
     etcd.database.coreos.com/scope: clusterwide
-    prometheus.io/scrape: "true"
-    prometheus.io/port: "2379"
 spec:
   size: 3
   version: "3.2.18"
+  pod:
+    annotations:
+      prometheus.io/scrape: "true"
+      prometheus.io/port: "2379"
+    affinity:
+      podAntiAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+        - labelSelector:
+            matchExpressions:
+            - key: etcd_cluster
+              operator: In
+              values: ["{{ .Values.name }}"]
+          topologyKey: kubernetes.io/hostname
