ability to deploy in restore mode

--- a/charts/etcd-cluster-backup/0.0.1/templates/cronjob.yaml
+++ b/charts/etcd-cluster-backup/0.0.1/templates/cronjob.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.etcdRestore }}
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
@@ -45,3 +46,4 @@ spec:
                   path: backup-configuration.json
           # Do not restart pod, job takes care on restarting failed pod.
           restartPolicy: Never
+{{ end }}
