--- a/overrides/jenkins-values.yaml
+++ b/overrides/jenkins-values.yaml
@@ -10,14 +10,14 @@ master:
   installPlugins:
     - azure-ad:0.3.4
     - matrix-auth:2.4.2
-    - kubernetes:1.15.2
+    - kubernetes:1.15.4
     - workflow-job:2.32
     - workflow-aggregator:2.6
-    - workflow-cps:2.67
+    - workflow-cps:2.68
     - pipeline-stage-view:2.11
     - pipeline-model-definition:1.3.8
     - pipeline-github-lib:1.0
-    - workflow-api:2.33
+    - workflow-api:2.34
     - pipeline-build-step:2.9
     - workflow-multibranch:2.21
     - pipeline-input-step:2.10
@@ -32,7 +32,7 @@ master:
     - build-monitor-plugin:1.12+build.201809061734
     - cloudbees-folder:6.8
     - dashboard-view:2.10
-    - build-name-setter:1.7.1
+    - build-name-setter:2.0.0
     - kubernetes-credentials-provider:0.12.1
     - credentials:2.1.18
     - credentials-binding:1.18
@@ -53,20 +53,21 @@ master:
   overwritePlugins: true
   JCasC:
     enabled: true
-    pluginVersion: 1.14
-    supportPluginVersion: 1.14
-    configScripts:
-      security: |
-        jenkins:
-          # AuthorizationStrategy:
-          #   azureAdMatrix:
-          #     grantedPermissions:
-          #       - "Overall/Administer:authenticated" This is an example. We might not want to manage this section, since the usernames are quite long
-          SecurityRealm:
-            azure:
-              clientId: "${CLIENT_ID:-unset}"
-              clientSecret: "${CLIENT_SECRET:-unset}"
-              tenant: "${TENANT:-unset}"
+    pluginVersion: 1.15
+    supportPluginVersion: 1.15
+    # Before using these configScripts, we need to authorize at least 1 person to be able to log in!
+    # configScripts:
+    #   security: |
+    #     jenkins:
+    #       # AuthorizationStrategy:
+    #       #   azureAdMatrix:
+    #       #     grantedPermissions:
+    #       #       - "Overall/Administer:authenticated" This is an example. We might not want to manage this section, since the usernames are quite long
+    #       SecurityRealm:
+    #         azure:
+    #           clientId: "${CLIENT_ID:-unset}"
+    #           clientSecret: "${CLIENT_SECRET:-unset}"
+    #           tenant: "${TENANT:-unset}"
     sidecars:
       configAutoReload:
         enabled: false
@@ -76,8 +77,8 @@ master:
       kubernetes.io/ingress.class: nginx
       kubernetes.io/tls-acme: "true"
       nginx.ingress.kubernetes.io/secure-backends: "true"
-    hostName: jenkins.eng.rancher.space
+    hostName: jenkins.int.rancher.io
     tls:
-    - secretName: jenkins.eng.rancher.space
+    - secretName: jenkins.int.rancher.io
       hosts:
-      - jenkins.eng.rancher.space
+      - jenkins.int.rancher.io
