--- a/overrides/jenkins-values.yaml
+++ b/overrides/jenkins-values.yaml
@@ -82,3 +82,18 @@ master:
     - secretName: jenkins.int.rancher.io
       hosts:
       - jenkins.int.rancher.io
+agent:
+  image: "drpebcak/jnlp-slave"
+  imageTag: "3.27-1-2"
+  privileged: true
+  resources:
+    requests:
+      cpu: "400m"
+      memory: "512Mi"
+    limits:
+      cpu: "400m"
+      memory: "512Mi"
+  volumes:
+    - type: HostPath
+      hostPath: /var/run/docker.sock
+      mountPath: /var/run/docker.sock
