image pull policy

--- a/overrides/k3s-overrides.yaml
+++ b/overrides/k3s-overrides.yaml
@@ -300,10 +300,12 @@ server:
         name: rancher
         namespace: kube-system
       spec:
-        chart: https://releases.rancher.com/server-charts/latest/rancher-2.2.3.tgz
+        chart: https://releases.rancher.com/server-charts/latest/rancher-2.2.4-rc12.tgz
         targetNamespace: cattle-system
         set:
           tls: external
           ingress.tls.source: secret
+          rancherImagePullPolicy: Always
+          rancherImageTag: master
 
 k3sClusterSecret: <some-secret>
