--- a/overrides/jenkins-values.yaml
+++ b/overrides/jenkins-values.yaml
@@ -11,7 +11,7 @@ master:
     - ansicolor:0.6.2
     - azure-ad:0.3.4
     - matrix-auth:2.4.2
-    - kubernetes:1.15.4
+    - kubernetes:1.15.5
     - workflow-job:2.32
     - workflow-aggregator:2.6
     - workflow-cps:2.68
@@ -33,7 +33,7 @@ master:
     - build-monitor-plugin:1.12+build.201809061734
     - cloudbees-folder:6.8
     - dashboard-view:2.10
-    - build-name-setter:2.0.0
+    - build-name-setter:2.0.1
     - kubernetes-credentials-provider:0.12.1
     - credentials:2.1.19
     - credentials-binding:1.18
@@ -55,11 +55,13 @@ master:
     - greenballs:1.15
     - parameterized-trigger:2.35.2
     - timestamper:1.9
+    - plain-credentials:1.5
+    - branch-api:2.5.1
   overwritePlugins: true
   JCasC:
     enabled: true
-    pluginVersion: 1.15
-    supportPluginVersion: 1.15
+    pluginVersion: 1.17
+    supportPluginVersion: 1.17
     configScripts:
       timestamper: |
         unclassified:
@@ -96,7 +98,7 @@ persistence:
   existingClaim: jenkins
 agent:
   image: "drpebcak/jnlp-slave"
-  imageTag: "3.27-1-2"
+  imageTag: "3.27-1-3"
   privileged: true
   idleMinutes: 5
   resources:
