--- a/overrides/jenkins-values.yaml
+++ b/overrides/jenkins-values.yaml
@@ -9,40 +9,40 @@ master:
     value: /var/jenkins_secrets
   installPlugins:
     - ansicolor:0.6.2
-    - azure-ad:0.3.4
+    - azure-ad:1.0.0
     - matrix-auth:2.4.2
-    - kubernetes:1.15.5
+    - kubernetes:1.16.0
     - workflow-job:2.32
     - workflow-aggregator:2.6
-    - workflow-cps:2.68
+    - workflow-cps:2.70
     - pipeline-stage-view:2.11
-    - pipeline-model-definition:1.3.8
+    - pipeline-model-definition:1.3.9
     - pipeline-github-lib:1.0
-    - workflow-api:2.34
+    - workflow-api:2.35
     - pipeline-build-step:2.9
     - workflow-multibranch:2.21
     - pipeline-input-step:2.10
     - pipeline-graph-analysis:1.10
     - workflow-cps-global-lib:2.13
-    - workflow-basic-steps:2.16
+    - workflow-basic-steps:2.18
     - pipeline-stage-step:2.3
-    - workflow-durable-task-step:2.30
+    - workflow-durable-task-step:2.31
     - pipeline-milestone-step:1.3.1
-    - workflow-scm-step:2.7
+    - workflow-scm-step:2.9
     - plugin-usage-plugin:0.4
     - build-monitor-plugin:1.12+build.201809061734
-    - cloudbees-folder:6.8
+    - cloudbees-folder:6.9
     - dashboard-view:2.10
     - build-name-setter:2.0.1
     - kubernetes-credentials-provider:0.12.1
     - credentials:2.1.19
-    - credentials-binding:1.18
+    - credentials-binding:1.19
     - git:3.10.0
     - junit:1.28
     - junit-realtime-test-reporter:0.6
     - jenkinswalldisplay:0.6.34
     - github:1.29.4
-    - slack:2.23
+    - slack:2.24
     - kubernetes-cli:1.6.0
     - build-blocker-plugin:1.7.3
     - rebuild:1.31
@@ -56,12 +56,13 @@ master:
     - parameterized-trigger:2.35.2
     - timestamper:1.9
     - plain-credentials:1.5
+    - ssh-credentials:1.16
     - branch-api:2.5.1
   overwritePlugins: true
   JCasC:
     enabled: true
-    pluginVersion: 1.17
-    supportPluginVersion: 1.17
+    pluginVersion: 1.19
+    supportPluginVersion: 1.19
     configScripts:
       timestamper: |
         unclassified:
