--- a/charts/etcd-operator-cluster/0.0.3/values.yaml
+++ b/charts/etcd-operator-cluster/0.0.3/values.yaml
@@ -2,3 +2,8 @@ name: etcd-cluster
 etcdEnv:
   - name: ETCD_AUTO_COMPACTION_RETENTION
     value: "1"
+size: 3
+version: "3.2.18"
+annotations:
+  prometheus.io/scrape: "true"
+  prometheus.io/port: "2379"
