git-mirror helmchart

--- a/charts/etcd-operator-cluster/0.0.3/templates/etcd-cluster.yaml
+++ b/charts/etcd-operator-cluster/0.0.3/templates/etcd-cluster.yaml
@@ -12,7 +12,7 @@ spec:
     etcdEnv:
     {{ range $k, $v := .Values.etcdEnv -}}
     - name: {{ $v.name }}
-      value: {{ $v.value }}
+      value: "{{ $v.value }}"
     {{ end }}
     {{- end }}
     annotations:
