etcd-operator-cluster stability fixes
fixes for telemetry chart

add containerPort for git-mirror

--- a/charts/telemetry/0.1.0/templates/deployment.yaml
+++ b/charts/telemetry/0.1.0/templates/deployment.yaml
@@ -30,7 +30,10 @@ spec:
               name: {{ .Values.secret.name }}
               key: telemetryGaTid
         - name: TELEMETRY_PG_HOST
-          value: db
+          valueFrom:
+            secretKeyRef:
+              name: {{ .Values.secret.name }}
+              key: telemetryPgHost
         - name: TELEMETRY_PG_PASS
           valueFrom:
             secretKeyRef:
