--- a/charts/git-mirror/0.1.0/templates/git-mirror-deployment.yaml
+++ b/charts/git-mirror/0.1.0/templates/git-mirror-deployment.yaml
@@ -56,6 +56,10 @@ spec:
         imagePullPolicy: {{ .Values.serve.image.pullPolicy }}
         resources:
           {{ toYaml .Values.serve.resources | nindent 10 }}
+        ports:
+        - name: http
+          containerPort: 80
+          protocol: TCP
         volumeMounts:
         - mountPath: {{ .Values.mirrorDataDir }}
           name: git-dir
