--- a/charts/git-mirror/0.1.0/Chart.yaml
+++ b/charts/git-mirror/0.1.0/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: "0.13.2"
+appVersion: "v0.3.0"
 description: A Helm chart for Kubernetes
 name: git-mirror
 version: 0.1.0
