--- a/charts/longhorn-upgrade-responder/0.1.0/templates/secret.yaml
+++ b/charts/longhorn-upgrade-responder/0.1.0/templates/secret.yaml
@@ -10,8 +10,7 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  slackApiToken: {{ .Values.secret.lurInfluxUrl | b64enc | quote }}
-  googleCaptchaSecret: {{ .Values.secret.lurInfluxUser | b64enc | quote }}
-  googleCaptchaSiteKey: {{ .Values.secret.lurInfluxPassword | b64enc | quote }}
-  lurResponseConfig: {{ .Values.secret.lurResponseConfig | b64enc | quote }}
+  lurInfluxUrl: {{ .Values.secret.lurInfluxUrl | b64enc | quote }}
+  lurInfluxUser: {{ .Values.secret.lurInfluxUser | b64enc | quote }}
+  lurInfluxPassword: {{ .Values.secret.lurInfluxPassword | b64enc | quote }}
 {{ end }}
