--- a/charts/longhorn-upgrade-responder/0.1.0/templates/deployment.yaml
+++ b/charts/longhorn-upgrade-responder/0.1.0/templates/deployment.yaml
@@ -85,4 +85,4 @@ spec:
       volumes:
       - name: lurresponseconfig
         configMap:
-          name: {{ template "longhornUpdateResponder.fullname" . }}
+          name: lurresponseconfig
