--- a/charts/longhorn-upgrade-responder/0.1.0/templates/deployment.yaml
+++ b/charts/longhorn-upgrade-responder/0.1.0/templates/deployment.yaml
@@ -22,6 +22,8 @@ spec:
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullSecrets:
+          - name: {{ .Values.image.pullSecrets }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
           - name: INFLUX_URL
