--- a/charts/longhorn-upgrade-responder/0.1.0/templates/deployment.yaml
+++ b/charts/longhorn-upgrade-responder/0.1.0/templates/deployment.yaml
@@ -41,6 +41,8 @@ spec:
               secretKeyRef:
                 name: {{ .Values.secret.name }}
                 key: lurInfluxPassword
+          command:
+          - longhorn-services
           args:
           - --debug
           - start-upgrade-responder
