disable healthchecks for now

--- a/charts/longhorn-upgrade-responder/0.1.0/templates/deployment.yaml
+++ b/charts/longhorn-upgrade-responder/0.1.0/templates/deployment.yaml
@@ -58,14 +58,14 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
+          # livenessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: http
+          # readinessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: http
           volumeMounts:
           - mountPath: /run/secrets/upgrade-responder-config.json
             name: lurresponseconfig
