quote the filepath

--- a/charts/git-mirror/0.1.0/templates/metrics-deployment.yaml
+++ b/charts/git-mirror/0.1.0/templates/metrics-deployment.yaml
@@ -41,7 +41,7 @@ spec:
         args:
         - rancher-catalog-stats
         - -filepath
-        - /var/log/nginx/access-*.log
+        - \"/var/log/nginx/access-*.log\"
         - -influxurl
         - $(INFLUX_URL)
         - -influxdb
