set replicaCounts and add prometheus annotations

--- a/charts/git-mirror/0.1.0/values.yaml
+++ b/charts/git-mirror/0.1.0/values.yaml
@@ -32,6 +32,8 @@ serve:
     annotations:
       kubernetes.io/ingress.class: nginx
       kubernetes.io/tls-acme: "true"
+      prometheus.io/scrape: "true"
+      prometheus.io/port: "10254"
     path: /
     hosts:
       - git.rancher.io
