--- a/charts/slackin/0.1.0/values.yaml
+++ b/charts/slackin/0.1.0/values.yaml
@@ -36,7 +36,7 @@ secret:
   #Google captcha site key
 
 
-replicaCount: 1
+replicaCount: 3
 
 image:
   repository: drpebcak/slackin-extended
@@ -55,6 +55,8 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "10254"
   path: /
   hosts:
     - slack.rancher.io
