--- a/charts/longhorn-upgrade-responder/0.1.0/values.yaml
+++ b/charts/longhorn-upgrade-responder/0.1.0/values.yaml
@@ -40,6 +40,8 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "10254"
   path: /
   hosts:
     - longhorn-upgrade-responder.rancher.io
