--- a/charts/rdns-server/0.3.0/values.yaml
+++ b/charts/rdns-server/0.3.0/values.yaml
@@ -2,9 +2,10 @@ replicaCount: 2
 podAnnotations: {}
 image:
   repository: rancher/rdns-server
-  tag: v0.4.7-rancher-amd64
+  tag: v0.5.3-rancher-amd64
   pullPolicy: IfNotPresent
-etcdEndpoint: http://etcd-cluster:2379
 resources: {}
 rdnsServerIngressHostname: api.on-rio.io
 dnsRootDomain: on-rio.io
+secret:
+  name: rdnsserver
