prom scrape ingress

--- a/charts/rdns-server/0.3.0/templates/tcp-ingress.yaml
+++ b/charts/rdns-server/0.3.0/templates/tcp-ingress.yaml
@@ -11,6 +11,8 @@ metadata:
       nginx.ingress.kubernetes.io/limit-rps: "5"
       nginx.ingress.kubernetes.io/limit-rpm: "50"
       nginx.ingress.kubernetes.io/limit-connections: "5"
+      prometheus.io/scrape: "true"
+      prometheus.io/port: "10254"
 spec:
   rules:
   - host: {{ .Values.rdnsServerIngressHostname }}
