--- a/overrides/jenkins-values.yaml
+++ b/overrides/jenkins-values.yaml
@@ -11,22 +11,22 @@ master:
     - ansicolor:0.6.2
     - azure-ad:1.0.0
     - matrix-auth:2.4.2
-    - kubernetes:1.17.2
+    - kubernetes:1.18.1
     - workflow-job:2.33
     - workflow-aggregator:2.6
-    - workflow-cps:2.72
+    - workflow-cps:2.73
     - pipeline-stage-view:2.11
     - pipeline-model-definition:1.3.9
     - pipeline-github-lib:1.0
-    - workflow-api:2.35
+    - workflow-api:2.36
     - pipeline-build-step:2.9
     - workflow-multibranch:2.21
     - pipeline-input-step:2.10
     - pipeline-graph-analysis:1.10
-    - workflow-cps-global-lib:2.14
+    - workflow-cps-global-lib:2.15
     - workflow-basic-steps:2.18
     - pipeline-stage-step:2.3
-    - workflow-durable-task-step:2.32
+    - workflow-durable-task-step:2.33
     - pipeline-milestone-step:1.3.1
     - workflow-scm-step:2.9
     - plugin-usage-plugin:0.4
@@ -35,15 +35,15 @@ master:
     - dashboard-view:2.10
     - build-name-setter:2.0.1
     - kubernetes-credentials-provider:0.12.1
-    - credentials:2.2.0
+    - credentials:2.2.1
     - credentials-binding:1.19
-    - git:3.10.1
+    - git:3.11.0
     - junit:1.28
     - junit-realtime-test-reporter:0.6
     - jenkinswalldisplay:0.6.34
     - github:1.29.4
-    - slack:2.27
-    - kubernetes-cli:1.6.0
+    - slack:2.28
+    - kubernetes-cli:1.7.0
     - build-blocker-plugin:1.7.3
     - rebuild:1.31
     - build-failure-analyzer:1.22.0
@@ -57,13 +57,22 @@ master:
     - timestamper:1.10
     - plain-credentials:1.5
     - ssh-credentials:1.17.1
-    - branch-api:2.5.3
+    - branch-api:2.5.4
     - dockerhub-notification:2.4.0
     - throttle-concurrents:2.0.1
+    - prometheus:2.0.0
+    - pam-auth:1.5.1
+    - windows-slaves:1.4
+    - antisamy-markup-formatter:1.5
+    - jdk-tool:1.3
+    - ldap:1.20
+    - external-monitor-job:1.7
+    - command-launcher:1.3
+    - bouncycastle-api:2.17
   overwritePlugins: true
   JCasC:
     enabled: true
-    pluginVersion: 1.23
+    pluginVersion: 1.25
     supportPluginVersion: 1.19
     configScripts:
       timestamper: |
@@ -86,8 +95,11 @@ master:
     sidecars:
       configAutoReload:
         enabled: false
+  prometheus:
+    enabled: true
   ingress:
     enabled: true
+    apiVersion: "networking.k8s.io/v1beta1"
     annotations:
       kubernetes.io/ingress.class: nginx
       kubernetes.io/tls-acme: "true"
