--- a/charts/rdns-server/0.3.0/templates/deployment.yaml
+++ b/charts/rdns-server/0.3.0/templates/deployment.yaml
@@ -39,6 +39,8 @@ spec:
               secretKeyRef:
                 name: {{ .Values.secret.name }}
                 key: ttl
+          command:
+          - rdns-server
           args:
           - route53
           ports:
