--- a/charts/longhorn-upgrade-responder/0.2.0/values.yaml
+++ b/charts/longhorn-upgrade-responder/0.2.0/values.yaml
@@ -39,7 +39,7 @@ ingress:
   enabled: true
   annotations:
     kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
+    cert-manager.io/cluster-issuer: letsencrypt-prod
     prometheus.io/scrape: "true"
     prometheus.io/port: "10254"
   path: /
