--- a/charts/git-mirror/0.2.0/values.yaml
+++ b/charts/git-mirror/0.2.0/values.yaml
@@ -31,7 +31,7 @@ serve:
     enabled: true
     annotations:
       kubernetes.io/ingress.class: nginx
-      kubernetes.io/tls-acme: "true"
+      cert-manager.io/cluster-issuer: letsencrypt-prod
       prometheus.io/scrape: "true"
       prometheus.io/port: "10254"
       nginx.ingress.kubernetes.io/ssl-ciphers: "HIGH:!aNULL:!MD5"
