--- a/charts/k3s/0.0.5/templates/tcp-ingress.yaml
+++ b/charts/k3s/0.0.5/templates/tcp-ingress.yaml
@@ -6,8 +6,7 @@ metadata:
   annotations:
       kubernetes.io/ingress.class: nginx
       {{- if .Values.agent.ingress.tls.enabled }}
-      kubernetes.io/tls-acme: "true"
-      certmanager.k8s.io/cluster-issuer: letsencrypt-prod
+      cert-manager.io/cluster-issuer: letsencrypt-prod
       nginx.ingress.kubernetes.io/secure-backends: "true"
       {{- end }}
 spec:
