--- a/charts/rdns-server/0.4.0/templates/tcp-ingress.yaml
+++ b/charts/rdns-server/0.4.0/templates/tcp-ingress.yaml
@@ -4,8 +4,7 @@ metadata:
   name: {{ template "rdnsserver.name" . }}
   annotations:
       kubernetes.io/ingress.class: nginx
-      kubernetes.io/tls-acme: "true"
-      certmanager.k8s.io/cluster-issuer: letsencrypt-prod
+      cert-manager.io/cluster-issuer: letsencrypt-prod
       nginx.ingress.kubernetes.io/secure-backends: "true"
       nginx.ingress.kubernetes.io/limit-rps: "5"
       nginx.ingress.kubernetes.io/limit-rpm: "50"
