--- a/charts/telemetry/0.4.0/values.yaml
+++ b/charts/telemetry/0.4.0/values.yaml
@@ -28,7 +28,7 @@ ingress:
   enabled: true
   annotations:
     kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
+    cert-manager.io/cluster-issuer: letsencrypt-prod
     prometheus.io/scrape: "true"
     prometheus.io/port: "10254"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
