--- a/overrides/jenkins-values.yaml
+++ b/overrides/jenkins-values.yaml
@@ -102,7 +102,7 @@ master:
     apiVersion: "networking.k8s.io/v1beta1"
     annotations:
       kubernetes.io/ingress.class: nginx
-      kubernetes.io/tls-acme: "true"
+      cert-manager.io/cluster-issuer: letsencrypt-prod
       nginx.ingress.kubernetes.io/secure-backends: "true"
     hostName: jenkins.int.rancher.io
     tls:
