--- a/charts/rdns-server/0.4.1/templates/tcp-ingress.yaml
+++ b/charts/rdns-server/0.4.1/templates/tcp-ingress.yaml
@@ -1,16 +1,9 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: {{ template "rdnsserver.name" . }}
   annotations:
-      kubernetes.io/ingress.class: nginx
-      cert-manager.io/cluster-issuer: letsencrypt-prod
-      nginx.ingress.kubernetes.io/secure-backends: "true"
-      nginx.ingress.kubernetes.io/limit-rps: "5"
-      nginx.ingress.kubernetes.io/limit-rpm: "50"
-      nginx.ingress.kubernetes.io/limit-connections: "5"
-      prometheus.io/scrape: "true"
-      prometheus.io/port: "10254"
+      {{- toYaml .Values.ingressAnnotations| nindent 6 }}
 spec:
   rules:
   - host: {{ .Values.rdnsServerIngressHostname }}
