update annotations to allow prometheus to scrape the service not ingress

--- a/charts/rdns-server/0.5.0/templates/service.yaml
+++ b/charts/rdns-server/0.5.0/templates/service.yaml
@@ -4,6 +4,9 @@ metadata:
   name: {{ template "rdnsserver.name" . }}
   labels:
     app: {{ template "rdnsserver.name" . }}
+  annotations:
+    {{- toYaml .Values.serviceAnnotations| nindent 4 }}
+
 spec:
   ports:
   - port: 80
