--- a/charts/rdns-server/0.6.0/templates/service.yaml
+++ b/charts/rdns-server/0.6.0/templates/service.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ template "rdnsserver.name" . }}
   labels:
     app: {{ template "rdnsserver.name" . }}
+  annotations:
+    {{- toYaml .Values.podAnnotations| nindent 4 }}
 spec:
   ports:
   - port: 80
