--- a/charts/rdns-server/0.7.0/templates/deployment.yaml
+++ b/charts/rdns-server/0.7.0/templates/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: {{ template "rdnsserver.name" . }}
+  annotations:
+    {{- toYaml .Values.podAnnotations| nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   template:
